# side-rustle

./: Cargo.toml  README.md  cli.py  cmds.txt  results.txt
src/: main.rs
