[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
indicatif = "0.16.2"
fstrings = "0.2.3"